# Zero-cache

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  public.yml  publish.yml
benchmarks/: bench_core.py
docs/: architecture.md  index.md  quickstart.md
examples/: async_example.py  fastapi_example.py  pipeline_example.py
src/zerocache/: __init__.py  _core.py  _decorators.py  _pipeline.py  _sorted_set.py  _types.py
tests/: conftest.py  test_core.py  test_decorators.py  test_hash.py  test_list.py  test_persistence.py  test_pipeline.py  test_pubsub.py  test_set.py  test_sorted_set.py
