[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyzerocache"
version = "1.1.1"
description = "Redis-like in-memory cache engine for Python — zero dependencies"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "ZeroCache Contributors", email = "zerocache@example.com" }]
requires-python = ">=3.10"
keywords = ["cache", "redis", "in-memory", "lru", "ttl", "async", "python"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = []   # zero-cache has no external dependencies

[project.optional-dependencies]
dev  = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

[project.urls]
Homepage    = "https://github.com/Zeustakeshi/zerocache"
Repository  = "https://github.com/Zeustakeshi/zerocache"
Issues      = "https://github.com/Zeustakeshi/zerocache/issues"
Changelog   = "https://github.com/Zeustakeshi/zerocache/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/zerocache"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths    = ["tests"]
addopts      = "-v"

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.mypy]
strict = true
